--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/dmitryfd/receipt-please/issues"
   },
-  "homepage": "https://github.com/dmitryfd/receipt-please#readme"
+  "homepage": "https://github.com/dmitryfd/receipt-please#readme",
+  "dependencies": {
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "escpos": "^3.0.0-alpha.4",
+    "escpos-usb": "^3.0.0-alpha.4",
+    "express": "^4.17.1",
+    "multer": "^1.4.2"
+  }
 }
